--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Lelehua - Bilingual Learning for Kids & Families</title>
     <meta name="description" content="Join Lelehua's community promoting bilingual education for children and families through engaging programs, resources, and activities." />
     <meta name="author" content="Lelehua" />
+    <meta name="keywords" content="music,singapore,community,english,language,cultural,chinese language learning,is mandarin hard to learn,watch videos online,english learning website,chinese simplified translator,learning in education,20 reasons why education is important,environmental sustainability examples at home,sustainable development goal 3,what is education,sustainable development goals,english class,my videos,watch videos,english learning,language english,deep meaning of love,education importance in society,english books online">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -14,11 +15,11 @@
     <meta property="og:title" content="Lelehua - Bilingual Learning for Kids & Families" />
     <meta property="og:description" content="Join Lelehua's community promoting bilingual education for children and families through engaging programs, resources, and activities." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
